--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -7,8 +7,7 @@ author_profile: true
 
 {% include base_path %}
 
-
-{% for post in site.portfolio %}
+{ for post in site.portfolio.bike-sharing-demand }
   {% include archive-single.html %}
 {% endfor %}
 
