--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -7,7 +7,8 @@ author_profile: true
 
 {% include base_path %}
 
-{ for post in site.portfolio.bike-sharing-demand }
+
+{% for post in site.portfolio %}
   {% include archive-single.html %}
 {% endfor %}
 
